# zero2prod-dev

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.toml  deny.toml  docker-compose.test.yml  sqlx-data.json
.github/workflows/: audit.yml  general.yml
env/production/: docker-compose.yaml  prometheus.yaml  setup  zero2prod.toml
env/test/: docker-compose.test.yaml  grafana-datasources.yaml  grafana-tempo.yaml  setup
migrations/: 20221207214913_create_subscriptions_table.sql  20221217213110_make_status_not_null_in_subscriptions.sql  20221217213529_create_subscription_tokens_table.sql  20221226002143_create_users_table.sql  20221226010843_add_salt_to_users.sql
src/: app.rs  domain.rs  email_client.rs  lib.rs  main.rs  settings.rs  trace.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: configuration.toml  health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
