[package]
name = "zero2prod"
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
axum-macros = "0.3.0"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
clap = { version = "4.0.29", default-features = false, features = ["derive", "std", "help"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
futures = { version = "0.3.25", default-features = false, features = ["std"] }
http = "0.2.8"
humantime-serde = "1.1.1"
hyper = { version = "0.14.23", features = ["server", "client"] }
hyper-rustls = { version = "0.23.2", default-features = false, features = ["http1", "tokio-runtime", "webpki-roots"] }
once_cell = "1.16.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
sqlx = { version = "0.6.2", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "offline"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "time"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
unicode-segmentation = "1.10.0"
uuid = { version = "1.2.2", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
claym = "0.4.0"
fake = "~2.3"
hyper = { version = "0.14.23", features = ["client"] }
linkify = "0.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1.23.0", features = ["rt", "macros"] }
wiremock = "0.5.15"
